# Ground_Station_Summer_2025

./: .gitignore  .gitmodules  August14th_Dashboard_First_Test.txt  CMakeLists.txt  Dashboard.cpp  Dashboard.h  Dashboard.hpp  DashboardController.cpp  DashboardController.hpp  DashboardGUI.cpp  DashboardGUI.hpp  Makefile  README.md  StatusIndicators.cpp  StructComponents.cpp  StructComponents.hpp  TODO.md  data.txt  imgui.ini  main.cpp  output.txt  package.xml  positions.txt  setup.py  startupscript.sh
BatteryMonitor/: BatteryMonitor.cpp  BatteryMonitor.h
components/: BatteryMonitor.cpp  BatteryMonitor.hpp  ConfigurationPanel.cpp  ConfigurationPanel.hpp  ControlPanel.cpp  Inputbox.cpp  MessageLogger.cpp  MessageLogger.hpp  MultiAxisPlotting.cpp  MultiAxisPlotting.hpp  Robot3DPlotting.cpp  RobotPlotting.cpp  RobotPlotting.hpp  SingleAxisPlotting.cpp  SingleAxisPlotting.hpp  StatusIndicators.cpp  StatusIndicators.hpp  imgui.ini  temp.cpp
docs/: System Structure.excalidraw  System Structure.excalidraw:Zone.Identifier
src/: DashboardGUI.hpp
test/: position_publisher.py
test-data/: robot-motion.txt
